[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "image_converter_rishabhd2"
version = "0.0.1"
authors = [{ name = "Rishabh Dubey", email = "rishabhdubey020@gmail.com" }]
description = "Convert image to PDF, PNG, JPG and more."
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/RecastDocApp/image_converter"
Issues = "https://github.com/RecastDocApp/image_converter/issues"
