[tool.poetry]
name = "recastdoc"
version = "0.0.1"
description = "Convert and Compress documents."
authors = ["Rishabh Dubey <rishabhdubey020@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
black = "^24.3.0"
pre-commit = "^3.7.0"
pytest = "^8.1.1"
pillow = "^10.2.0"
flake8 = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
